--- a/ifolder/src/FormsTrayApp/AcceptInvitation.resx
+++ b/ifolder/src/FormsTrayApp/AcceptInvitation.resx
@@ -149,7 +149,7 @@
     <value>480, 4</value>
   </data>
   <data name="groupBox1.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>0</value>
+    <value>6</value>
   </data>
   <data name="groupBox1.Text">
     <value />
@@ -224,7 +224,7 @@
     <value>75, 23</value>
   </data>
   <data name="ok.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>1</value>
+    <value>7</value>
   </data>
   <data name="ok.Text">
     <value>Accept</value>
@@ -302,7 +302,7 @@
     <value>75, 23</value>
   </data>
   <data name="cancel.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>2</value>
+    <value>8</value>
   </data>
   <data name="cancel.Text">
     <value>Cancel</value>
@@ -386,7 +386,7 @@
     <value>472, 95</value>
   </data>
   <data name="iFolderDetails.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>3</value>
+    <value>1</value>
   </data>
   <data name="iFolderDetails.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -455,7 +455,7 @@
     <value>100, 16</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>4</value>
+    <value>0</value>
   </data>
   <data name="label1.Text">
     <value>iFolder Details:</value>
@@ -536,7 +536,7 @@
     <value>391, 20</value>
   </data>
   <data name="iFolderLocation.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>5</value>
+    <value>4</value>
   </data>
   <data name="iFolderLocation.Text">
     <value />
@@ -614,10 +614,10 @@
     <value>128, 16</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>6</value>
+    <value>3</value>
   </data>
   <data name="label2.Text">
-    <value>iFolder Location:</value>
+    <value>iFolder &amp;Location:</value>
   </data>
   <data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>TopLeft</value>
@@ -692,10 +692,10 @@
     <value>72, 23</value>
   </data>
   <data name="browse.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>7</value>
+    <value>5</value>
   </data>
   <data name="browse.Text">
-    <value>Browse...</value>
+    <value>&amp;Browse...</value>
   </data>
   <data name="browse.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>MiddleCenter</value>
@@ -767,7 +767,7 @@
     <value>352, 16</value>
   </data>
   <data name="label3.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>8</value>
+    <value>2</value>
   </data>
   <data name="label3.Text">
     <value>Choose a location for the iFolder to be created on this computer.</value>
@@ -808,14 +808,14 @@
   <data name="$this.DrawGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </data>
-  <data name="$this.Name">
-    <value>AcceptInvitation</value>
-  </data>
   <data name="$this.TrayHeight" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>80</value>
   </data>
   <data name="$this.SnapToGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </data>
+  <data name="$this.Name">
+    <value>AcceptInvitation</value>
   </data>
   <data name="$this.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
