--- a/ifolder/src/FormsTrayApp/GlobalProperties.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.resx
@@ -224,10 +224,10 @@
     <value>100, 16</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>3</value>
+    <value>1</value>
   </data>
   <data name="label1.Text">
-    <value>Server:</value>
+    <value>&amp;Server:</value>
   </data>
   <data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>TopLeft</value>
@@ -296,7 +296,7 @@
     <value>432, 344</value>
   </data>
   <data name="iFolderView.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>0</value>
+    <value>3</value>
   </data>
   <data name="iFolderView.Text">
     <value />
@@ -653,7 +653,7 @@
     <value>True</value>
   </data>
   <data name="menuAction.Text">
-    <value>iFolder</value>
+    <value>&amp;iFolder</value>
   </data>
   <data name="menuAction.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -674,7 +674,7 @@
     <value>True</value>
   </data>
   <data name="menuActionCreate.Text">
-    <value>Create</value>
+    <value>&amp;Create</value>
   </data>
   <data name="menuActionCreate.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -716,7 +716,7 @@
     <value>True</value>
   </data>
   <data name="menuActionAccept.Text">
-    <value>Setup iFolder</value>
+    <value>S&amp;etup iFolder</value>
   </data>
   <data name="menuActionAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -737,7 +737,7 @@
     <value>True</value>
   </data>
   <data name="menuActionRemove.Text">
-    <value>Remove iFolder</value>
+    <value>Re&amp;move iFolder</value>
   </data>
   <data name="menuActionRemove.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -779,7 +779,7 @@
     <value>True</value>
   </data>
   <data name="menuActionOpen.Text">
-    <value>Open</value>
+    <value>&amp;Open</value>
   </data>
   <data name="menuActionOpen.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -800,7 +800,7 @@
     <value>True</value>
   </data>
   <data name="menuActionShare.Text">
-    <value>Share with...</value>
+    <value>&amp;Share with...</value>
   </data>
   <data name="menuActionShare.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -821,7 +821,7 @@
     <value>True</value>
   </data>
   <data name="menuActionResolve.Text">
-    <value>Resolve conflicts</value>
+    <value>Resolve &amp;conflicts</value>
   </data>
   <data name="menuActionResolve.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -842,7 +842,7 @@
     <value>True</value>
   </data>
   <data name="menuActionSync.Text">
-    <value>Sync now</value>
+    <value>S&amp;ync now</value>
   </data>
   <data name="menuActionSync.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -863,7 +863,7 @@
     <value>True</value>
   </data>
   <data name="menuActionRevert.Text">
-    <value>Revert to a normal folder</value>
+    <value>&amp;Revert to a normal folder</value>
   </data>
   <data name="menuActionRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -884,7 +884,7 @@
     <value>True</value>
   </data>
   <data name="menuActionProperties.Text">
-    <value>Properties</value>
+    <value>&amp;Properties</value>
   </data>
   <data name="menuActionProperties.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -926,7 +926,7 @@
     <value>True</value>
   </data>
   <data name="menuExit.Text">
-    <value>Exit</value>
+    <value>E&amp;xit</value>
   </data>
   <data name="menuExit.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -947,7 +947,7 @@
     <value>True</value>
   </data>
   <data name="menuView.Text">
-    <value>View</value>
+    <value>&amp;View</value>
   </data>
   <data name="menuView.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -968,7 +968,7 @@
     <value>True</value>
   </data>
   <data name="menuViewRefresh.Text">
-    <value>Refresh</value>
+    <value>&amp;Refresh</value>
   </data>
   <data name="menuViewRefresh.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -989,7 +989,7 @@
     <value>True</value>
   </data>
   <data name="menuHelp.Text">
-    <value>Help</value>
+    <value>&amp;Help</value>
   </data>
   <data name="menuHelp.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1010,7 +1010,7 @@
     <value>True</value>
   </data>
   <data name="menuHelpHelp.Text">
-    <value>Help</value>
+    <value>&amp;Help</value>
   </data>
   <data name="menuHelpHelp.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1031,7 +1031,7 @@
     <value>True</value>
   </data>
   <data name="menuHelpAbout.Text">
-    <value>About</value>
+    <value>&amp;About</value>
   </data>
   <data name="menuHelpAbout.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1088,7 +1088,7 @@
     <value>416, 16</value>
   </data>
   <data name="status.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>10</value>
+    <value>4</value>
   </data>
   <data name="status.Text">
     <value>Idle...</value>
@@ -1154,7 +1154,7 @@
     <value>200, 16</value>
   </data>
   <data name="progressBar1.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>11</value>
+    <value>5</value>
   </data>
   <data name="progressBar1.Text">
     <value />
@@ -1232,7 +1232,7 @@
     <value>448, 28</value>
   </data>
   <data name="toolBar1.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>12</value>
+    <value>0</value>
   </data>
   <data name="toolBar1.TextAlign" type="System.Windows.Forms.ToolBarTextAlign, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Underneath</value>
@@ -1369,6 +1369,9 @@
   <data name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </data>
+  <data name="$this.Name">
+    <value>GlobalProperties</value>
+  </data>
   <data name="$this.Localizable" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </data>
@@ -1383,9 +1386,6 @@
   </data>
   <data name="$this.SnapToGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="$this.Name">
-    <value>GlobalProperties</value>
   </data>
   <data name="$this.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
@@ -1787,7 +1787,7 @@
 		<value>An error was encountered while reading the proxy settings.</value>
 	</data>
 	<data name="deleteAction">
-		<value>Delete iFolder</value>
+		<value>&amp;Delete iFolder</value>
 	</data>
 	<data name="revertTitle">
 		<value>Revert iFolder Confirmation</value>
